[gd_scene load_steps=2 format=3 uid="uid://dx30x8e4md2xj"]

[ext_resource type="Script" uid="uid://bu67lkegvxks2" path="res://scenes/GUI/containers/gui_combat_conclusion.gd" id="1_hkt2u"]

[node name="GUICombatConclusion" type="PanelContainer"]
process_mode = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 32.0
offset_right = 20.0
offset_bottom = 44.0
grow_horizontal = 2
script = ExtResource("1_hkt2u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MobSummonedTitle" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Total Enemy"
vertical_alignment = 1

[node name="MobSummoned" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"HeaderMedium"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MobKilledTitle" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Enemy Killed"
vertical_alignment = 1

[node name="MobKilled" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"HeaderMedium"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TurnsTakenTitle" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Turns Taken
"
vertical_alignment = 1

[node name="TurnsTaken" type="Label" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"HeaderMedium"
horizontal_alignment = 2
vertical_alignment = 1
